crates/backyard-parser/tests/snapshots/call__basic.snap
---
source: crates/backyard-parser/tests/call.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: call
    name:
      node_type: identifier
      name: call
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 4
          offset: 4
      leadings: []
      trailings: []
    arguments:
      - node_type: call_argument
        name: ~
        value:
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 5
              offset: 5
            end:
              line: 1
              column: 5
              offset: 5
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 5
            offset: 5
          end:
            line: 1
            column: 5
            offset: 5
        leadings: []
        trailings: []
      - node_type: call_argument
        name: ~
        value:
          node_type: number
          value: "2"
          loc:
            start:
              line: 1
              column: 8
              offset: 8
            end:
              line: 1
              column: 8
              offset: 8
          leadings: []
          trailings: []
        loc:
          start:
            line: 1
            column: 8
            offset: 8
          end:
            line: 1
            column: 8
            offset: 8
        leadings: []
        trailings: []
    loc:
      start:
        line: 1
        column: 4
        offset: 4
      end:
        line: 1
        column: 9
        offset: 9
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 10
    offset: 10
leadings: []
trailings: []
