crates/backyard-parser/tests/snapshots/call__named_argument.snap
---
source: crates/backyard-parser/tests/call.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: call
    name:
      node_type: this
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    arguments:
      - node_type: call_argument
        name:
          node_type: identifier
          name: a
          loc:
            start:
              line: 1
              column: 6
              offset: 6
            end:
              line: 1
              column: 7
              offset: 7
          leadings: ~
          trailings: ~
        value:
          node_type: number
          value: "1"
          loc:
            start:
              line: 1
              column: 9
              offset: 9
            end:
              line: 1
              column: 9
              offset: 9
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 6
            offset: 6
          end:
            line: 1
            column: 9
            offset: 9
        leadings: ~
        trailings: ~
      - node_type: call_argument
        name:
          node_type: identifier
          name: b
          loc:
            start:
              line: 1
              column: 12
              offset: 12
            end:
              line: 1
              column: 13
              offset: 13
          leadings: ~
          trailings: ~
        value:
          node_type: number
          value: "2"
          loc:
            start:
              line: 1
              column: 15
              offset: 15
            end:
              line: 1
              column: 15
              offset: 15
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 12
            offset: 12
          end:
            line: 1
            column: 15
            offset: 15
        leadings: ~
        trailings: ~
    loc:
      start:
        line: 1
        column: 5
        offset: 5
      end:
        line: 1
        column: 16
        offset: 16
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 17
    offset: 17
leadings: ~
trailings: ~
