crates/backyard-parser/tests/snapshots/call__parenthesis.snap
---
source: crates/backyard-parser/tests/call.rs
expression: asts
snapshot_kind: text
---
leadings: []
trailings: []
node_type: program
children:
  - leadings: []
    trailings: []
    node_type: call
    name:
      leadings: []
      trailings: []
      node_type: parenthesis
      statement:
        leadings: []
        trailings: []
        node_type: arrow_function
        is_ref: false
        parameters: []
        return_type: ~
        body:
          leadings: []
          trailings: []
          node_type: number
          value: "5"
          loc:
            start:
              line: 1
              column: 9
              offset: 9
            end:
              line: 1
              column: 9
              offset: 9
        loc:
          start:
            line: 1
            column: 1
            offset: 1
          end:
            line: 1
            column: 9
            offset: 9
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 10
          offset: 10
    arguments: []
    loc:
      start:
        line: 1
        column: 11
        offset: 11
      end:
        line: 1
        column: 12
        offset: 12
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 13
    offset: 13
